Fixed an issue where ie8 had extra space in the anchor

--- a/app/assets/stylesheets/theme/profile.css.less
+++ b/app/assets/stylesheets/theme/profile.css.less
@@ -26,10 +26,10 @@
 
     .dropdown-toggle {
       height:28px;
+      width:28px;
       padding:2px;
       position:relative;
       z-index:1001;
-      border:solid 1px transparent;
       border:none;
 
       &:hover {
